fix chooseAlgorithm not working

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     
     <!-- File that define the function that must be used to swap two indexes in a vector, so that can be visualized -->
     <script src="shared/util.js"></script>
+    <script src="shared/chooseAlgorithm.js"></script>
     <script src="shared/swap.js"></script>
 
     <!-- You can import here your javascript files with the algorithms to use in the chooseAlgorithm.js -->
