--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Sorting Visualizer</title>
+    <link rel="icon" href="favicon.png" />
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+
     <script src="lib/p5.js"></script>
-    
-    <!-- File that define the function that must be used to swap two indexes in a vector, so that can be visualized -->
-    <script src="shared/util.js"></script>
-    <script src="shared/chooseAlgorithm.js"></script>
+
+    <!-- Config functions -->
+    <script src="config/refreshAlgorithm.js"></script>
+    <script src="config/changeColorRectangles.js"></script>
+    <script src="shared/selectSortingAlgorithm.js"></script>
     <script src="shared/swap.js"></script>
 
     <!-- You can import here your javascript files with the algorithms to use in the chooseAlgorithm.js -->
@@ -20,10 +25,11 @@
     <script src="functions/quickSort.js"></script>
 
     <!-- Main javascript file with the setup() and draw() function -->
+    <script src="config/eventListeners.js"></script>
     <script src="sketch.js"></script>
 </head>
 
-<body>
+<body class="position-relative">
     <header class="p-3 bg-dark text-white">
         <div class="container">
             <div class="d-flex justify-content-between">
@@ -32,28 +38,47 @@
                     <span>Sorting Visualizer</span>
                 </div>
 
-                <!-- Range input -->
-                <div class="col-3 d-flex justify-content-between align-items-center">
+                <!-- Range input of time -->
+                <div class="col-3 d-flex flex-column justify-content-between align-items-center">
+                    <label>Delay per swap (milliseconds):</label>
+                    <div class="d-flex">
+                        <input type="range" min="10" max="500" class="form-range" id="delayRange">
+                        <span class="ps-2" id="delayValue">10</span>
+                    </div>
+                </div>
+
+                <!-- Range input of rectangles -->
+                <div class="col-3 d-flex flex-column justify-content-between align-items-center">
                     <label>Num of rectangles:</label>
-                    <input type="range" min="10" max="200" class="form-range" id="rectanglesRange">
-                    <span class="ps-2" id="rangeValue">50</span>
+                    <div class="d-flex">
+                        <input type="range" min="10" max="200" class="form-range" id="rectanglesRange">
+                        <span class="ps-2" id="rangeValue">50</span>
+                    </div>
                 </div>
 
                 <!-- Select input -->
                 <div class="col-3 d-flex align-items-center">
                     <select class="form-select" aria-label="selectAlgorithm" id="selectAlgorithm">
-                        <option selected value="bubbleSort">BubbleSort</option>
-                        <option value="quickSort">QuickSort</option>
+                        <option value="bubbleSort">BubbleSort</option>
+                        <option selected value="quickSort">QuickSort</option>
                     </select>
-                    <button type="button" id="refreshBtn" class="ms-2 btn btn-light">Refresh</button>
+                    <button type="button" id="refreshBtn" class="ms-2 btn btn-light">
+                        <img src="assets/replay_black_24dp.svg" />
+                    </button>
                 </div>
             </div>
         </div>
     </header>
 
-    <div id="algorithm_space"></div>
+    <footer class="footer mt-auto py-3 w-100 bg-light position-absolute" style="bottom: -3rem;">
+        <div class="container">
+          <span class="text-muted">Place sticky footer content here.</span>
+        </div>
+      </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+        crossorigin="anonymous"></script>
 
 </body>
 
