feat : Footer with info added

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <footer class="footer mt-auto py-3 w-100 bg-light position-absolute" style="bottom: -3rem;">
         <div class="container">
-          <span class="text-muted">Place sticky footer content here.</span>
+          <span class="text-muted">&copy; João Pedro Favoretti, 2021. The repository is open sourced and hosted on <a href="https://github.com/joaofavoretti/WebSortingVisualizer">github</a>, feel free to contribute!</span>
         </div>
       </footer>
 
