--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <!-- The functions used must all be asynchronous and use the swap function defined in the "shared/swap.js" file -->
     <script src="functions/bubbleSort.js"></script>
     <script src="functions/quickSort.js"></script>
+    <script src="functions/mergeSort.js"></script>
 
     <!-- Main javascript file with the setup() and draw() function -->
     <script src="config/eventListeners.js"></script>
@@ -62,6 +63,7 @@
                     <select class="form-select" aria-label="selectAlgorithm" id="selectAlgorithm">
                         <option selected value="bubbleSort">BubbleSort</option>
                         <option value="quickSort">QuickSort</option>
+                        <option value="mergeSort">MergeSort</option>
                     </select>
                     <button type="button" id="refreshBtn" class="ms-2 btn btn-light">
                         <img src="assets/replay_black.svg" />
