--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script src="functions/bubbleSort.js"></script>
     <script src="functions/quickSort.js"></script>
     <script src="functions/mergeSort.js"></script>
+    <script src="functions/bogoSort.js"></script>
 
     <!-- Main javascript file with the setup() and draw() function -->
     <script src="config/eventListeners.js"></script>
@@ -64,6 +65,7 @@
                         <option selected value="bubbleSort">BubbleSort</option>
                         <option value="quickSort">QuickSort</option>
                         <option value="mergeSort">MergeSort</option>
+                        <option value="bogoSort">BogoSort</option>
                     </select>
                     <button type="button" id="refreshBtn" class="ms-2 btn btn-light">
                         <img src="assets/replay_black.svg" />
